# BoardGameAssistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MVP.md  README.md  package.json  test_login.html
.claude/: settings.local.json
.claude/agents/: architecture-infrastructure-advisor.md  backend-api-developer.md  documentation-writer.md  expo-mobile-frontend-expert.md  fastapi-backend-expert.md  nextjs-admin-frontend-expert.md
.github/: copilot-instructions.md
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  documentation.instructions.md  expo-mobile-frontend.instructions.md  fastapi-backend.instructions.md  nextjs-admin-frontend.instructions.md  python.instructions.md
admin-portal/: ADMIN_PORTAL_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SETUP.md  admin-portal-checklist.md  eslint.config.js  middleware.ts  next.config.js  next.config.mjs  package.json  proxy.ts  tailwind.config.ts
admin-portal/app/: globals.css  layout.tsx
admin-portal/app/(dashboard)/: layout.tsx
admin-portal/components/games/: add-document-modal.tsx  create-game-modal.tsx  documents-tab.tsx  faq-tab.tsx  game-info-tab.tsx  import-bgg-modal.tsx
admin-portal/components/layout/: header.tsx  sidebar.tsx
admin-portal/components/ui/: animated-background.tsx  notifications-provider.tsx  tabs.tsx  theme-toggle.tsx
admin-portal/lib/: api.ts  auth-cookies.ts  notifications.ts  supabase.ts  theme-context.tsx  types.ts  utils.ts
backend/: .gitignore  README.md  pyproject.toml  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: admin.py  auth.py  games.py  genai.py  health.py
backend/app/core/: auth.py
backend/app/models/: schemas.py
backend/app/services/: admin_games.py  bgg.py  chat_sessions.py  feature_flags.py  game_faqs.py  games.py  gemini_provider.py  sections.py  storage.py  supabase.py  usage_tracking.py
backend/scripts/: README_CREATE_BGC_SECTION.md  create_bgc_section.py  insert_bgc_section.sql
backend/tests/: conftest.py  supabase_test_helpers.py  test_admin_documents_api.py  test_admin_games_api.py  test_admin_knowledge_service.py  test_auth_endpoints.py  test_bgg_service.py  test_games_endpoints.py
backend/tests/services/: test_gemini_provider.py
docs/: BGA-0001_supabase.md  BGA-0002_backend-bootstrap.md  BGA-0003_authentication.md  BGA-0004_mobile-shell.md  BGA-0005_mobile-supabase-integration.md  BGA-0006_games-endpoints.md  BGA-0007_mobile-games-integration.md  BGA-0008_mobile-localization.md  BGAI-0001_supabase.md  BGAI-0002_backend-bootstrap.md  BGAI-0003_authentication.md  BGAI-0004_mobile-shell.md  BGAI-0005_mobile-supabase-integration.md  BGAI-0006_games-endpoints.md  BGAI-0007_mobile-games-integration.md  BGAI-0008_mobile-localization.md  BGAI-0009_mobile-chat-history.md  BGAI-0010_admin-portal-backend.md  BGAI-0011_admin-portal-frontend.md  BGAI-0012_BGG_manual_import.md  BGAI-0013_dark-mode.md  BGAI-0014_upload-documents.md  BGAI-0015_gemini-file-search.md  BGAI-0016_ai-chat-implementation.md  DEPLOYMENT.md
mobile/: BUILD_INSTRUCTIONS.md  README.md  app.json  jest.setup.ts  package.json
mobile/__mocks__/: expo-secure-store.ts
mobile/__tests__/: App.test.tsx
mobile/src/: App.tsx
mobile/src/components/: EmptyState.tsx  LanguageSelector.tsx  PrimaryButton.tsx  ScreenContainer.tsx  TextField.tsx
mobile/src/config/: env.ts
mobile/src/constants/: theme.ts
mobile/src/context/: AuthContext.tsx  LanguageContext.tsx
mobile/src/data/: mockGames.ts
mobile/src/hooks/: useAuth.ts  useChatHistory.ts  useChatSession.ts  useGameDetail.ts  useGames.ts
mobile/src/localization/: translations.ts
mobile/src/types/: auth.ts  (+3 more)
supabase/: config.toml  create_test_users.sql  seed.sql
supabase/archive/: 20241122000000_initial_schema.sql  20241124000000_migrate_to_game_documents.sql  20241127000000_drop_knowledge_documents.sql  20241128000000_add_title_to_game_documents.sql  20241203000000_create_game_documents_bucket.sql  20241204000000_add_game_description.sql  20241204010000_extend_source_type_enum.sql
supabase/migrations/: 20241124000000_migrate_to_game_documents.sql  20241125000000_add_knowledge_documents.sql  20241126000000_remove_provider_name_from_game_documents.sql  20251205000000_baseline.sql
(+25 files in other folders)
