[tool.poetry]
name = "bgai-backend"
version = "0.1.0"
description = "BGAI Backend API - Board Game Assistant Intelligent"
authors = ["BGAI Team <team@bgai.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
# Core FastAPI Stack
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Supabase Integration
supabase = "^2.10.0"

# AI Providers
openai = "^1.58.0"
google-generativeai = "^0.8.0"
anthropic = "^0.42.0"

# LangChain (RAG)
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"

# Database & Vectors
pgvector = "^0.3.0"
psycopg2-binary = "^2.9.10"

# HTTP & Utilities
httpx = "^0.28.0"
python-multipart = "^0.0.20"

# Security & Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.0"

# Configuration & Logging
python-dotenv = "^1.0.1"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^25.11.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313', 'py314']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP035",  # allow typing.List, typing.Dict, etc.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
