[tool.poetry]
name = "bgai-backend"
version = "0.1.0"
description = "BGAI Backend API - Board Game Assistant Intelligent"
authors = ["BGAI Team <team@bgai.dev>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
# Core FastAPI Stack
fastapi = "0.122.0"
uvicorn = {extras = ["standard"], version = "0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "2.12.0"

# Supabase Integration
supabase = "2.24.0"

# AI Providers
openai = "2.8.1"
google-genai = "1.53.0"
anthropic = "0.75.0"

# LangChain (RAG)
langchain = "1.1.0"
langchain-openai = "1.1.0"
langchain-community = "0.4.1"

# HTTP & Utilities
httpx = "0.28.1"
python-multipart = "0.0.20"
tenacity = "9.1.2"

# Security & Auth
python-jose = {extras = ["cryptography"], version = "3.5.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pyjwt = "2.10.1"

# Configuration & Logging
python-dotenv = "1.2.1"
structlog = "25.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.1"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
black = "25.11.0"
ruff = "0.14.6"
mypy = "1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP035",  # allow typing.List, typing.Dict, etc.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
